# BlueMarble

./: CMakeLists.txt  main.cpp  matrices.cpp
shaders/: triangle_frag.glsl  triangle_vert.glsl
